<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.detail_movie.view.DetailGamesActivity">

    <com.erkutaras.statelayout.StateLayout
        android:id="@+id/state_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sl_state="content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivGames"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@drawable/image_games_sample"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="@+id/ivGames"
                    app:layout_constraintTop_toTopOf="@+id/ivGames"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/ic_favorite_border"
                    app:layout_constraintEnd_toEndOf="@+id/ivGames"
                    app:layout_constraintTop_toTopOf="@+id/ivGames"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivGames">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:id="@+id/tvGamenName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/game_name_text"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/release_date_text"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvGamenName" />

                        <TextView
                            android:id="@+id/tvValueReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/date_text"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvReleaseDate"
                            app:layout_constraintStart_toEndOf="@+id/tvReleaseDate"
                            app:layout_constraintTop_toTopOf="@+id/tvReleaseDate"
                            tools:ignore="SpUsage" />


                        <LinearLayout
                            android:id="@+id/llGenres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate">

                            <TextView
                                android:id="@+id/tvGendres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/gendres_text"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvGendres"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:itemCount="3"
                                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:orientation="horizontal" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llDevelopers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/llGenres">

                            <TextView
                                android:id="@+id/tvDeveloper"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/developers_text"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvDevelopers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:itemCount="3"
                                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:orientation="horizontal" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/description_text"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/llDevelopers"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvValueDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/description_value_text"
                            android:textColor="@color/black"
                            android:textSize="12dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                            tools:ignore="SpUsage" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </com.erkutaras.statelayout.StateLayout>

</androidx.constraintlayout.widget.ConstraintLayout>